corrected animation alignment

--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body::-webkit-scrollbar{
 .section-3{
     width: 100%;
     height: 80vh;
-    margin-top: -2%;
     padding: 0% 10%;
+    position: absolute;
 }
 
 .section-2{
@@ -145,7 +145,7 @@ body::-webkit-scrollbar{
 .section1 img{
 	opacity:0.2;
 	position:absolute;
-	left:0;
+	left:-100px;
 	top:0;
 	width:100%;
 	height:80%;
@@ -156,7 +156,7 @@ body::-webkit-scrollbar{
     position:relative;
 }
 .abtus{
-    padding: 5% 15%;
+    padding: 5% 5%;
     text-align: justify;
     line-height: 1.7;
 
@@ -304,7 +304,7 @@ nav{
     }
     
     .abtus{
-        padding: 5% 7%;
+        padding: 5% 5%;
         text-align: justify;
         line-height: 1.7;
      
@@ -498,6 +498,7 @@ iframe{
 .third{
 	z-index:999;
 	position: absolute;
+   
 	display: inline-block;
 }
 
